Created all the unit tests for the services