@@ -140,6 +140,14 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <!--Tell  the JVM it is okay for Mockito to attach themselves dynamically -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.3</version> <configuration>
+                <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+            </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
